--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^7.0",
         "illuminate/support": "^8.5",
         "illuminate/routing": "^8.5",
-        "illuminate/http": "^8.5"
+        "illuminate/http": "^8.5",
+        "illuminate/pagination": "^8.67"
     },
     "suggest": {
         "laravel/framework": "^8.5"
@@ -40,5 +41,10 @@
                 "SIM_ASN_Route": "SIM_ASN\\Laravel\\Facades\\Route"
             }
         }
+    },
+    "scripts": {
+        "fix": [
+            "php-cs-fixer fix . --rules=@Symfony"
+        ]
     }
 }
