--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "bkpsdm-karawang/sim-asn-php-client",
     "description": "PHP Client for SIM-ASN Service BKPSDM Karawang",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "type": "library",
     "keywords": [
         "sim asn",
@@ -25,10 +25,9 @@
         "php": "^7.3",
         "guzzlehttp/guzzle": "^7.0",
         "illuminate/support": "^8.5",
-        "illuminate/routing": "^8.5",
         "illuminate/http": "^8.5",
-        "illuminate/pagination": "^8.67",
-        "illuminate/database": "8.x-dev"
+        "illuminate/pagination": "^8.5",
+        "illuminate/database": "^8.5"
     },
     "suggest": {
         "laravel/framework": "^8.5"
