--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "bkpsdm-karawang/sim-asn-php-client",
     "description": "PHP Client for SIM-ASN Service BKPSDM Karawang",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "type": "library",
     "keywords": [
         "sim asn",
@@ -27,7 +27,8 @@
         "illuminate/support": "^8.5",
         "illuminate/http": "^8.5",
         "illuminate/pagination": "^8.5",
-        "illuminate/database": "^8.5"
+        "illuminate/database": "^8.5",
+        "denmasyarikin/laravel-api-pagination": "dev-master"
     },
     "suggest": {
         "laravel/framework": "^8.5"
