--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,10 @@
         "illuminate/database": "^10|^11",
         "guzzlehttp/guzzle": "^7.0"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3",
+        "laravel/framework": "^10|^11"
+    },
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
